# is-in-iran

./: .gitignore  README.md  pyproject.toml
src/is_in_iran/: __init__.py  core.py
src/is_in_iran/data/: iran.geojson
tests/: test_basic.py
